--- a/fiber.css
+++ b/fiber.css
@@ -5,7 +5,7 @@
     font-family: 'Inter', sans-serif;
 }
 body{
-    padding:4% 10% 0 10%;
+   
     height:100vh;
 }
 .df{
@@ -13,6 +13,13 @@ body{
 }
 .column{
     flex-direction: column;
+}
+.pink{
+    background:rgb(247, 240, 242);
+    padding:4% 10% 8% 10%;
+}
+.white{
+    padding:4% 10% 0 10%;
 }
 header{
     align-items: center;
@@ -99,8 +106,12 @@ img{
     justify-content: center;
     align-items: start;
 }
-.pinkmidright img{
-    width:70%;
+.pinkmidright  img{
+    width:80%;
+    margin-top:-15%;
+}
+.pinkmid{
+    margin-top:8%;
 }
 .blue{
     border: 2px red solid;
