--- a/fiber.css
+++ b/fiber.css
@@ -5,7 +5,6 @@
     font-family: 'Inter', sans-serif;
 }
 body{
-   
     height:100vh;
 }
 .df{
@@ -14,7 +13,7 @@ body{
 .column{
     flex-direction: column;
 }
-.pink{
+.pink,footer{
     background:rgb(247, 240, 242);
     padding:4% 10% 8% 10%;
 }
@@ -54,17 +53,7 @@ button{
     font-size: 14px;
     border-radius: 4px;
 }
-img{
-    width:12%;
-}
-.pinkmid{
-    border-style: solid;
-}
-.tick{
-    border-style: solid;
-}
 .pinkmidleft{
-    border: 2px red solid;
     width:45%;
 }
 .stars img{
@@ -74,7 +63,6 @@ img{
     font-size: 14px;
 }
 .pinkh1{
-    border-style: solid;
     margin-top: 2%;
     margin-bottom:3.5% ;
 }
@@ -93,6 +81,9 @@ img{
     text-decoration-thickness: 1.5px;
     margin-left: 2.8%;
 }
+.tick{
+    margin-top: 4%;
+}
 .lefttick img{
     width:9%;
     margin-right: 5px;
@@ -101,22 +92,108 @@ img{
     font-size: 14px;
 }
 .pinkmidright{
-    border:2px yellow solid;
     width:50%;
     justify-content: center;
     align-items: start;
 }
 .pinkmidright  img{
-    width:80%;
-    margin-top:-15%;
+    width:87%;
+    margin-top:-20%;
 }
 .pinkmid{
-    margin-top:8%;
+    margin-top:12%;
 }
 .blue{
-    border: 2px red solid;
     justify-content: space-between;
 }
+.whiteabout p{
+    color:rgb(51, 51, 185);
+    font-weight:700;
+    font-size:15px;
+}
+.whiteabout h1{
+    width:43%;
+    margin:2% 0 3% 0;
+}
+.features img{
+    width:9%;
+}
+.features{
+    margin:0 0 5% 0;
+}
+.features b{
+    font-size: 14px;
+    margin:2% 0 3% 0;
+}
+.features p{
+    font-size: 14.5px;
+    width:80%;
+}
+.blue{
+    background: rgb(51, 51, 185);
+    border-radius: 4px;
+    padding: 3% 3% 0 3%;
+    justify-content:flex-end;
+    color:white;
+}
+.blue button{
+    color: rgb(51, 51, 185);
+    background: white;
+    font-weight:800;
+    font-size:19px;
+    padding:19px;
+}
+.blue h1{
+    font-size: 2em;
+    margin-top: 20%;
+}
 .blueright{
-    border-style: solid;
+    width:80%;   
+}
+.blue p{
+    opacity: 0.8;
+    width:75%;
+    margin: 2% 0;
+}
+.blueleft{
+    width:70%;
+}
+.blue img{
+    width:100%;
+    height:100%;
+}
+
+.reviewsinfo{
+    border:2px rgba(128, 128, 128,0.5) solid;
+    padding:2%;
+    border-radius: 4px;
+    margin:4% 0; 
+    width:32%;
+}
+.reviews img{
+    width:80%;
+}
+.reviews h4{
+    color:rgb(51, 51, 185);
+}
+.reviews p{
+    font-size: 15px;
+    font-weight: 600;
+}
+.reviewsmid p{
+    margin:4% 0;
+}
+.reviews button{
+    width:100%;
+    color:rgb(51, 51, 185);
+    background: white;
+    border:1px rgba(128, 128, 128,0.5) solid;
+    font-weight: 800;
+}
+.reviews{
+    justify-content: space-between;
+    
+}
+footer{
+    padding: 3% 10%;
 }
