--- a/fiber.css
+++ b/fiber.css
@@ -164,9 +164,9 @@ button{
 }
 
 .reviewsinfo{
-    border:2px rgba(128, 128, 128,0.5) solid;
+    border:1.5px rgba(128, 128, 128,0.5) solid;
     padding:2%;
-    border-radius: 4px;
+    border-radius: 4.8px;
     margin:4% 0; 
     width:32%;
 }
@@ -196,4 +196,14 @@ button{
 }
 footer{
     padding: 3% 10%;
+    justify-content: space-between;
+}
+.Fiber{
+    width:34%;
+}
+footer h3{
+    margin-bottom: 9px;
+}
+footer a{
+    margin-bottom: 8px;
 }
