--- a/fiber.css
+++ b/fiber.css
@@ -338,9 +338,7 @@ footer a{
 /* sign up page */
 .signupform{
     padding:3% 0 0 5%;
-    width:40%;
-
-    border-style: solid;
+    width:50%;
 }
 .signupform h1{
     margin:2% 0 4% 0;
@@ -393,9 +391,6 @@ footer a{
     align-items: center;
     justify-content: space-between;
 }
-.bluesign{
-    border-style: solid;
-}
 ::placeholder{
     font-weight: 400;
     font-size: 14px;
@@ -410,6 +405,35 @@ footer a{
     bottom:9px;
     cursor: pointer;
 }
-img:active{
-    opacity: 0.2;
+.password img:active{
+    opacity: 0.4;
+}
+.bluesign{
+  background:rgba(51, 51, 185,1);
+  padding:5.7% 5%;
+  width:50%;
+}
+.blueblue{
+    color:white;
+}
+.blueblue h1{
+    font-size: 2em;
+}
+.blueblue figcaption{
+    align-items: center;
+    margin-top: 3%;
+}
+.blueblue p{
+    width:67%;
+    text-align: center;
+    margin-top: 7px;
+    color: rgba(255, 255, 255, 0.8);
+    font-size: 15px;
+}
+.blueblue img{
+    width:100%;
+    height:100%;   
+}
+.blueblue figure{
+    height:62%;
 }
