--- a/fiber.css
+++ b/fiber.css
@@ -439,16 +439,24 @@ footer a{
 .blueblue img{
     width:100%;
     height:100%;   
-    position:relative;
+    
+    
 }
 #blue1{
-    z-index:1;
+    position: relative;
 }
 #blue2,#blue3,#blue4{
-    display:none;
+    position:absolute;
+    z-index:-1;
+}
+#blue2,#blue3,#blue4{
+   
 }
 .blueblue figure{
     height:62%;
+    position: relative;
+    border-style: solid;
+    border-color: black;
 }
 .round{
     width:14px;
@@ -456,6 +464,31 @@ footer a{
     border-radius:8.5px;
     height:12px;
 }
+.hoverr{
+    justify-content: space-between;
+    
+}
+.blueblue{
+    position: relative;
+
+}
+.blueblue:hover #hoverr{
+    display:block;
+}
+.blueblue h3{
+    color:rgba(0, 0, 0,0.7);
+    position:absolute;
+    top:50%;
+    cursor:pointer;
+    display:block;
+    border-radius: 15px;
+    padding:0 7px 3px 7px;
+    background-color: rgba(187, 183, 183,0.3);
+}
+#hoverright{
+    right:0;
+}
+
 @media  (max-width:500px) {
     .bluesign{
         display:none;
