--- a/fiber.css
+++ b/fiber.css
@@ -5,7 +5,7 @@
     font-family: 'Inter', sans-serif;
 }
 body{
-    height:100vh;
+  height:100vh;
 }
 .df{
     display:flex;
@@ -334,6 +334,9 @@ footer a{
     .white{
         padding-bottom: 30px;
     }   
+    .hoverr{
+        opacity:1;
+    }
 }
 /* sign up page */
 .signupform{
@@ -411,8 +414,7 @@ footer a{
 .bluesign{
   background:rgba(51, 51, 185,1);
   padding:5.7% 5%;
-  width:50%;
-  
+  width:50%; 
 }
 .big{
     justify-content: center;
@@ -428,6 +430,8 @@ footer a{
 .blueblue figcaption{
     align-items: center;
     margin-top: 3%;
+    justify-content: center;
+    text-align: center;
 }
 .blueblue p{
     width:67%;
@@ -438,34 +442,22 @@ footer a{
 }
 .blueblue img{
     width:100%;
-    height:100%;  
-}
-.blueblue figure{
-    position:relative;
-    border-style: solid;
-    height:100%;
+    aspect-ratio: 4/2; 
 }
 #blue1{
-    display: block;
-
+    opacity:1;
 }
 #blue2,#blue3,#blue4{
     position:absolute;
     top:0;
     left:0;
-    display:none;
-}
-#blue2,#blue3,#blue4{
-   
+    opacity:0;
 }
 #round1{
     background: rgba(255, 255, 255,0.8);
 }
 .blueblue figure{
-    height:62%;
     position: relative;
-    border-style: solid;
-    border-color: black;
 }
 .round{
     width:14px;
@@ -475,27 +467,19 @@ footer a{
 }
 .hoverr{
     justify-content: space-between;
-    
-}
-.blueblue{
-    position: relative;
-
-}
-.blueblue:hover #hoverr{
-    display:block;
+    opacity:0;
+    position:absolute;
+    top:50%;
+    width:100%;
+    transform: translateY(-50%); 
+    z-index: 5;
 }
 .blueblue h3{
     color:rgba(0, 0, 0,0.7);
-    position:absolute;
-    top:50%;
     cursor:pointer;
-    display:block;
     border-radius: 15px;
     padding:0 7px 3px 7px;
     background-color: rgba(187, 183, 183,0.3);
-}
-#hoverright{
-    right:0;
 }
 
 @media  (max-width:500px) {
